fix largeur offscreen mobil m  s2 overflow hidden

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22231,6 +22231,7 @@ p {
     flex-direction: column;
     width: 100%;
     height: 650px;
+    overflow: hidden;
   }
   .s2-part-left {
     height: 50%;
