--- a/src/sass/modules/_s2AboutUs.scss
+++ b/src/sass/modules/_s2AboutUs.scss
@@ -60,6 +60,7 @@
         flex-direction: column;
         width:100%;
         height: 650px;
+        overflow: hidden;
     }
     .s2-part-left{
         height: 50%;
